--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ja">
   <head>
     <meta charset="utf-8" />
@@ -70,7 +70,7 @@
         </h2>
         <ul class="section-wish">
           <li class="section-wish__list">
-            <div class="">
+            <div class="section-wish__list--inner">
               <h3>htmlマークアップとCSSスタイリング</h3>
               <p>
                 私は全工程の中で、htmlとCSSが一番好きです。理由は、人間とコンピューターが同じ構造・同じ結果を共有できる言語だからです。<br />
@@ -80,14 +80,12 @@
           </li>
 
           <li class="section-wish__list">
-            <div class="">
+            <div class="section-wish__list--inner">
               <h3>得意領域を活かして仕事をしたい</h3>
               <p>
                 以下の図は、UIデザインにおけるデザインの五段階モデルと呼ばれるものです。<br />
                 こちらを用いて私の得意領域の可視化を行っています。
               </p>
-            </div>
-            <div class="">
               <figure class="section-wish__figcaption">
                 <img
                   src="./img/specialty.png"
@@ -104,17 +102,17 @@
             </div>
           </li>
           <li class="section-wish__list">
-            <div class="">
-              <h3>「地味な整備屋」をやりたい</h3>
+            <div class="section-wish__list--inner">
+              <h3>「地味な整備屋」「デザインと実装を繋げること」をやりたい</h3>
               <p>
                 私は環境調整や、仕組み、動線そのものを整え、「誰がやっても同じ結果になる」「タスクに取り組みやすい」環境にすることが好きです。<br />
-                実務で言うと、Figmaを活用したコンポーネント設計、運用ルール策定、デザインと実装の橋渡しが得意です。<br />
-                チーム全体の生産性と一貫性を高めたいです。
+                実務で言うと、再利用や運用を前提としたコンポーネント設計の部分にあたります。<br />
+                デザインと実装のあいだに生じやすいズレを減らすことを目指して、チーム全体の生産性と一貫性を高めたいです。
               </p>
             </div>
           </li>
           <li class="section-wish__list">
-            <div class="">
+            <div class="section-wish__list--inner">
               <h3>アクセシビリティを担保したい</h3>
               <p>
                 Webやアプリケーションに関わる人間としての責務だと思っています。<br />
@@ -124,7 +122,7 @@
             </div>
           </li>
           <li class="section-wish__list">
-            <div>
+            <div class="section-wish__list--inner">
               <h3>まとめ</h3>
               <p>
                 マークアップとスタイリング + 元々持っているUIデザインとUXの知見
@@ -241,7 +239,7 @@
                 情報設計では、ユーザーが「考えなくても使える」状態を目指しています。<br />
                 操作や情報の負荷を下げるため、
                 情報の整理・優先順位付け・構造化を行い、
-                FigJamを用いて、関係者間で共通認識を持てる形に可視化します。
+                FigJam等を用いて、関係者間で共通認識を持てる形に可視化します。
               </p>
             </div>
           </li>
@@ -250,9 +248,8 @@
             <div class="section-skills__card">
               <h3 class="">UXリサーチ</h3>
               <p>
-                UXリサーチを通じてユーザーの状況や行動を把握し、
+                UXリサーチを通じてユーザーの状況や感情推移、行動を把握し、
                 課題として整理した上でUX設計へと反映しています。<br />
-                リサーチ結果を目的なく並べるのではなく、
                 「何を設計で解決すべきか」を明確にするためのプロセスとして、リサーチを位置づけています。
               </p>
             </div>
