codepenの保険用ファイル作成、見直し、仕上げ #14

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="robots" content="noindex" />
     <title>小柳 佳那子のポートフォリオ</title>
     <meta name="description" content="小柳 佳那子のポートフォリオです" />
     <link
       rel="stylesheet"
       href="https://unpkg.com/ress@4.0.0/dist/ress.min.css"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./assets/style.css" />
   </head>
   <body class="l-container">
     <a class="utility-skip-link" href="#main">本文へスキップ</a>
@@ -38,7 +39,7 @@
           </div>
           <div class="section-about__content">
             <img
-              src="./img/profile.png"
+              src="./assets/img/profile.png"
               class="section-about__img"
               alt="小柳 佳那子のプロフィール写真"
               width="100"
@@ -88,7 +89,7 @@
               </p>
               <figure class="section-wish__figcaption">
                 <img
-                  src="./img/specialty.png"
+                  src="./assets/img/specialty.png"
                   class="section-wish--img"
                   alt="UIデザインプロセスの5段階図（表層・骨格・構造・要件・戦略）。そのうち中流工程にあたる「骨格」「構造」「要件」に★マークが付いており、これらが得意領域であることを示している。"
                   width="400"
@@ -141,7 +142,7 @@
             <div class="section-works__card">
               <div class="">
                 <img
-                  src="./img/app_mockup.png"
+                  src="./assets/img/app_mockup.png"
                   class="section-works__thumb"
                   alt="過去の自分やお手本と見比べ、技術向上を目指すアプリのUIデザインにぼかしを入れた写真"
                   width="400"
@@ -158,7 +159,7 @@
             <div class="section-works__card">
               <div class="">
                 <img
-                  src="./img/fish_app_img.png"
+                  src="./assets/img/fish_app_img.png"
                   class="section-works__thumb"
                   alt="釣り人が釣果を投稿することに特化したSNSアプリのUIデザインにぼかしを入れた写真"
                   width="400"
@@ -177,7 +178,7 @@
             <div class="section-works__card">
               <div class="">
                 <img
-                  src="./img/bank_app_img.png"
+                  src="./assets/img/bank_app_img.png"
                   class="section-works__thumb"
                   alt="銀行口座の不正な取引を自動で判断し、不正取引を検知するシステムのUIデザインにぼかしを入れた画像"
                   width="400"
@@ -344,7 +345,7 @@
                     <div class="">
                       <figure>
                         <img
-                          src="./img/button_figma_variant_design.png"
+                          src="./assets/img/button_figma_variant_design.png"
                           alt="Figma画面の左にあるサイドパネルと、デザイン作業パネル。作成したボタンコンポーネントの状態一覧をスクリーンショットした画像。左側にレイヤー名が上から一覧で並んでいる。上から親要素VariantsのButtonの中に、inactive-disabled、inactive-hover、active-disabled、active-hover、active-focused、active、inactive-focused、inactiveのレイヤー名が並んでいる。縦に Normal と Active、横に Default・Hover・Focus・Disabled が並び、デザイン作成のワークスペースには、青い「押さないでね」ボタンと赤い「押しちゃったんですか？」ボタンが、それぞれ通常・ホバー・フォーカス・無効の色や枠線の違いで表示されている。"
                           width="400"
                           height="300"
@@ -450,7 +451,7 @@
                   <div class="">
                     <figure>
                       <img
-                        src="./img/card_figma_design.png"
+                        src="./assets/img/card_figma_design.png"
                         alt="Figma画面の左にあるサイドパネルとデザイン作業パネルで作成したカードコンポーネントの状態をスクリーンショットした画像。記事カードのUIデザイン案。サムネイル画像、日付、タグ、タイトル、リンクボタンで構成されており、デフォルト状態とホバー状態のスタイル比較が表示されている。左側にはレイヤー名が並んでおり、上から順に親要素のcardの中に、画像用のcard__thumbnail、本文用のcard__body、ボタン用のcard__buttonが含まれている。"
                         width="400"
                         height="300"
@@ -516,7 +517,7 @@
                   <div class="">
                     <figure>
                       <img
-                        src="./img/form_figma_variant_design.png"
+                        src="./assets/img/form_figma_variant_design.png"
                         alt="Figmaで作成したログインフォームの5つの状態（デフォルト、フォーカス、入力済み、エラー、無効）のデザイン案。メールアドレスとパスワードの入力欄、ログインボタンの変化を示している。。"
                         width="400"
                         height="300"
