画像読み込みスピードの改善 #15

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               </p>
               <figure class="section-wish__figcaption">
                 <img
-                  src="./assets/img/specialty.png"
+                  src="./assets/img/specialty.jpg"
                   class="section-wish--img"
                   alt="UIデザインプロセスの5段階図（表層・骨格・構造・要件・戦略）。そのうち中流工程にあたる「骨格」「構造」「要件」に★マークが付いており、これらが得意領域であることを示している。"
                   width="400"
@@ -126,9 +126,9 @@
             <div class="section-wish__list--inner">
               <h3>まとめ</h3>
               <p>
-                マークアップとスタイリング + 元々持っているUIデザインとUXの知見
-                + アクセシビリティを、<br />
-                よりユーザーが多いWebサイト領域で活かしたいです。
+                HTMLとCSSを使い、構造が分かりやすく一貫性のある実装を目指しています。<br />
+                設計や情報整理など中流工程を強みに、デザインと実装のズレを減らしてきました。<br />
+                地味な整備とアクセシビリティを大切にし、使いやすく保守しやすいWeb制作に関わりたいです。
               </p>
             </div>
           </li>
@@ -142,7 +142,7 @@
             <div class="section-works__card">
               <div class="">
                 <img
-                  src="./assets/img/app_mockup.png"
+                  src="./assets/img/app_mockup.jpg"
                   class="section-works__thumb"
                   alt="過去の自分やお手本と見比べ、技術向上を目指すアプリのUIデザインにぼかしを入れた写真"
                   width="400"
@@ -159,7 +159,7 @@
             <div class="section-works__card">
               <div class="">
                 <img
-                  src="./assets/img/fish_app_img.png"
+                  src="./assets/img/fish_app_img.jpg"
                   class="section-works__thumb"
                   alt="釣り人が釣果を投稿することに特化したSNSアプリのUIデザインにぼかしを入れた写真"
                   width="400"
@@ -178,7 +178,7 @@
             <div class="section-works__card">
               <div class="">
                 <img
-                  src="./assets/img/bank_app_img.png"
+                  src="./assets/img/bank_app_img.jpg"
                   class="section-works__thumb"
                   alt="銀行口座の不正な取引を自動で判断し、不正取引を検知するシステムのUIデザインにぼかしを入れた画像"
                   width="400"
@@ -342,10 +342,10 @@
                 <ul class="section-thinking__case-list">
                   <li class="section-thinking__case-list-inner">
                     <h5>Figmaでのデザイン</h5>
-                    <div class="">
+                    <div>
                       <figure>
                         <img
-                          src="./assets/img/button_figma_variant_design.png"
+                          src="./assets/img/button_figma_variant_design.jpg"
                           alt="Figma画面の左にあるサイドパネルと、デザイン作業パネル。作成したボタンコンポーネントの状態一覧をスクリーンショットした画像。左側にレイヤー名が上から一覧で並んでいる。上から親要素VariantsのButtonの中に、inactive-disabled、inactive-hover、active-disabled、active-hover、active-focused、active、inactive-focused、inactiveのレイヤー名が並んでいる。縦に Normal と Active、横に Default・Hover・Focus・Disabled が並び、デザイン作成のワークスペースには、青い「押さないでね」ボタンと赤い「押しちゃったんですか？」ボタンが、それぞれ通常・ホバー・フォーカス・無効の色や枠線の違いで表示されている。"
                           width="400"
                           height="300"
@@ -393,11 +393,20 @@
                       defer
                       src="https://public.codepenassets.com/embed/index.js"
                     ></script>
+                    <p>
+                      コードが読みにくい場合や、表示されない場合は<a
+                        href="https://github.com/KanakoShin/kanako-koyanagi-profile-site/tree/main/examples/button"
+                        >こちら</a
+                      >を参照してください。
+                    </p>
                   </li>
                   <li class="section-thinking__case-list-inner">
                     <h5>React例</h5>
                     <p>
-                      注：こちらのコードはあくまでデザインや、その命名をもとにAIで生成したReactのコードになります。本人はバリバリReact書けます！とかではないです。
+                      注：こちらは、デザインと命名をもとに、
+                      実装イメージを確認するために作成したReactコード例です。<br />
+                      普段Reactを主軸とした実装を行っているわけではありませんが、
+                      デザインと実装の対応を意識した設計例として掲載しています
                     </p>
                     <p
                       class="codepen"
@@ -451,7 +460,7 @@
                   <div class="">
                     <figure>
                       <img
-                        src="./assets/img/card_figma_design.png"
+                        src="./assets/img/card_figma_design.jpg"
                         alt="Figma画面の左にあるサイドパネルとデザイン作業パネルで作成したカードコンポーネントの状態をスクリーンショットした画像。記事カードのUIデザイン案。サムネイル画像、日付、タグ、タイトル、リンクボタンで構成されており、デフォルト状態とホバー状態のスタイル比較が表示されている。左側にはレイヤー名が並んでおり、上から順に親要素のcardの中に、画像用のcard__thumbnail、本文用のcard__body、ボタン用のcard__buttonが含まれている。"
                         width="400"
                         height="300"
@@ -499,6 +508,12 @@
                     defer
                     src="https://public.codepenassets.com/embed/index.js"
                   ></script>
+                  <p>
+                    コードが読みにくい場合や、表示されない場合は<a
+                      href="https://github.com/KanakoShin/kanako-koyanagi-profile-site/tree/main/examples/card"
+                      >こちら</a
+                    >を参照してください。
+                  </p>
                 </li>
               </ul>
             </div>
@@ -517,7 +532,7 @@
                   <div class="">
                     <figure>
                       <img
-                        src="./assets/img/form_figma_variant_design.png"
+                        src="./assets/img/form_figma_variant_design.jpg"
                         alt="Figmaで作成したログインフォームの5つの状態（デフォルト、フォーカス、入力済み、エラー、無効）のデザイン案。メールアドレスとパスワードの入力欄、ログインボタンの変化を示している。。"
                         width="400"
                         height="300"
@@ -565,6 +580,12 @@
                     defer
                     src="https://public.codepenassets.com/embed/index.js"
                   ></script>
+                  <p>
+                    コードが読みにくい場合や、表示されない場合は<a
+                      href="https://github.com/KanakoShin/kanako-koyanagi-profile-site/tree/main/examples/form"
+                      >こちら</a
+                    >を参照してください。
+                  </p>
                 </li>
               </ul>
             </div>
