新しいセクション作成 #16

--- a/examples/button/index.html
+++ b/examples/button/index.html
@@ -3,15 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <!-- なるべく素直な表示にするための推奨 -->
-
     <meta name="format-detection" content="telephone=no" />
-
     <title>CodePen Backup</title>
     <meta name="description" content="CodePenのバックアップ用HTMLです。" />
-
-    <!-- CSS -->
     <link rel="stylesheet" href="./style.css" />
   </head>
 
@@ -28,7 +22,7 @@
       </div>
     </main>
 
-    <!-- JS -->
+    <!-- JavaScript -->
     <script src="./script.js" defer></script>
   </body>
 </html>
