新しいセクション作成 #16

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                 <h4>当時思っていたこと</h4>
                 <ul>
                   <li>
-                    子ども側に「頑張れ」「ちゃんとしろ」とか絶対に言わない
+                    子ども側に「頑張れ」「ちゃんとして」とか絶対に言わない
                   </li>
                   <li>
                     行動や能力じゃなくて、「環境」「情報」「システム」の仕組み側を変える。
