ページナビゲーションつける #18

--- a/index.html
+++ b/index.html
@@ -16,10 +16,27 @@
   <body class="layout-container">
     <a class="utility-skip-link" href="#main">本文へスキップ</a>
     <header class="site-header utility-full-bleed">
-      <div>
+      <div class="site-header--inner">
         <div class="site-header__logo">
           <a href="index.html" class="site-header__brand">Kanako Koyanagi</a>
         </div>
+        <nav class="site-nav" aria-label="ページ内目次">
+          <ul class="site-nav__list">
+            <li><a class="site-nav__link" href="#about">略歴</a></li>
+            <li><a class="site-nav__link" href="#wish">今後やりたいこと</a></li>
+            <li>
+              <a class="site-nav__link" href="#accessibility"
+                >アクセシビリティへの考え</a
+              >
+            </li>
+            <li><a class="site-nav__link" href="#work">やってきたこと</a></li>
+            <li><a class="site-nav__link" href="#skills">できること</a></li>
+            <li><a class="site-nav__link" href="#team">チーム開発</a></li>
+            <li>
+              <a class="site-nav__link" href="#design">デザイン設計思考</a>
+            </li>
+          </ul>
+        </nav>
       </div>
     </header>
 
@@ -65,7 +82,7 @@
         </div>
       </section>
 
-      <section class="layout-section">
+      <section id="wish" class="layout-section">
         <h2 class="layout-section--title">今後やりたいこと</h2>
         <ul class="section-wish">
           <li class="section-wish__list">
@@ -133,7 +150,7 @@
         </ul>
       </section>
 
-      <section class="layout-section">
+      <section id="accessibility" class="layout-section">
         <h2 class="layout-section--title">アクセシビリティへの考え</h2>
         <ul class="section-wish__list">
           <li>
@@ -159,17 +176,17 @@
                 </p>
 
                 <ul>
-                  <li>自身がADHD当事者だから</li>
-                  <li>弱者を助けてあげたい</li>
+                  <li>自身が当事者だから</li>
+                  <li>弱者を助けたい</li>
                 </ul>
                 <p>
                   <strong>どちらも違います。</strong
                   >※そもそも「弱者」という言葉を使うのは適切ではないと思っています
                 </p>
                 <p>
-                  自分もしんどかった、でも見えていない、想像の及んでいない人々のしんどさを垣間見てしまったから、<br />
+                  見えていない、想像の及んでいない人々のしんどさを垣間見てしまったから、<br />
                   という理由が今現在、言語化できる限界かもしれません。
-                  自分の経験ベースだけを想いにやっていくのは違う気がします。それに、私の知識や想像力には限界があります。<br />
+                  自分の経験ベースだけを想いにやっていくのも、私の知識や想像力にも限界があります。<br />
                   人と関わっていく中で、自分一人だけでは辿り着けない場所があることを知りました。
                   どんな人も立場ごとに、それぞれ「しんどさ」と「特権」を持っています。その知識と想像力が、私は欲しいのです。
                 </p>
@@ -186,7 +203,7 @@
                   支援が必要な生徒は、確実にいます。文科省も特別支援教育を重要なものとして位置付けていました。<br />
                   それにも関わらず、現場にはあまりそれが浸透しているようには見えませんでした。<br />
                   <strong>むしろ、厄介なものとして存在していました。</strong
-                  >※当時私の勤務していた学校に限ります
+                  >※当時私の勤務していた一部の学校に限ります
                 </p>
                 <p>
                   その時に、<br />
@@ -195,10 +212,10 @@
                   と言われたことは、未だに自分の中で未消化の問題であり、一生をかけて答えなければならない問いであると今では感じています。<br />
                 </p>
                 <p>
-                  それと同時に思っていたことが、「自分次第で決めたことに対して、生徒側の影響が大きすぎる」でした。<br />
+                  それと同時に思っていたことが、「自分次第で決められることに対して、生徒側への影響が大きすぎる」でした。<br />
                   私の裁量で、教室や授業を設計できてしまう権力を持ってしまっている。大袈裟かもしれないけれど、私の裁量で生徒の運命が決まってしまう。
                   居心地によっては、最悪この世界が嫌いになりかねない、と思いました。<br />
-                  二十代前半にして、いきなりそんな権力を持つことになるのは、まずもって健康的じゃない、というのを自覚すべきだと思っていました。<br />
+                  二十代前半で、いきなりそんな権力を持つことになるのは、まずもって健康的じゃない、というのを自覚すべき（当時はここまで言語化できていませんが）だと思っていました。<br />
                   さらに、自分の中にいる子どもの頃の自分が「いいなあ。自分はこんな支援受けたことない」と事あるごとに言うのです。<br />
                   自問自答の日々が始まりました。
                 </p>
@@ -227,15 +244,15 @@
                 <p>
                   それから、美術の授業のために行ったデザインの教材研究の中から、ひとつのワードに辿り着きました。<br />それがアクセシビリティでした。私にとってそれは、<strong>あの時の質問にやっと言葉で返せそうな概念そのもの</strong>でした。
                 </p>
-                <p>Webアクセシビリティは、</p>
+                <p>アクセシビリティは、</p>
                 <ul>
                   <li>Aさんは字幕がほしい</li>
                   <li>Bさんはキーボード操作がしたい</li>
                   <li>Cさんは色ではなくテキストで判断したい</li>
                 </ul>
                 <p>
-                  のように、以上のことを網羅した<strong>「公正寄りの設計」を、コードとインターフェイスでやるもの</strong>であると理解しました。
-                  障害も、特性も、状況も誰一人として同じ人はいません（自身はこの世は障害者と健常者に分かれた世界では決してないと考えます）。<br />
+                  のように、以上のことを網羅した<strong>「設計」を、コードとインターフェイスでやるもの</strong>であると理解しました。
+                  障害も、特性も、状況も誰一人として同じ人はいません（私自身はこの世は障害者と健常者に分かれた世界では決してないと考えます）。<br />
                   アクセシビリティや、特別支援は「特別扱い」ではない。
                   <strong>「誰も排除しない設計」</strong>であると考えています。
                 </p>
@@ -335,12 +352,14 @@
                     width="400"
                     height="300"
                   />
-                  <h5>ひとこと</h5>
-                  <p>
-                    トラウマインフォームドデザインは、まさに私の中で一生モノの課題になりそうです。<br />
-                    「あれはそういうことだったのか」という目から鱗の連続でした。権力というのは、誰でも持ち得るものだと思います。<br />
-                    UIもUXも、人に辛い思いを強いるべきではないと私も思います。そして、Burnout対策のみならず、あらゆる事象に応用できる重要な内容であると感じました。
-                  </p>
+                  <div>
+                    <h5>ひとこと</h5>
+                    <p>
+                      トラウマインフォームドデザインは、まさに私の中で一生モノの課題になりそうです。<br />
+                      「あれはそういうことだったのか」という目から鱗の連続でした。権力というのは、誰でも持ち得るものだと思います。<br />
+                      UIもUXも、人に辛い思いを強いるべきではないと私も思います。そして、Burnout対策のみならず、あらゆる事象に応用できる重要な内容であると感じました。
+                    </p>
+                  </div>
                 </div>
                 <hr />
                 <div class="section-accessibility__omake--inner">
@@ -350,11 +369,13 @@
                   <a href="https://www.chaco-web.com/blog/gaadjp2024-report02/">
                     Tenさん（合同会社Ledesone）のセッション「見えづらい困りごとを持つ当事者視点を活かしたインクルーシブデザイン」
                   </a>
-                  <h5>ひとこと</h5>
-                  <p>
-                    アクセシビリティにおいて、いわゆる「見えづらい障害」に焦点を当ててある登壇をまとめてある記事で、ざっくりわかりやすく網羅されているので、導入にはよいのではないかと思いました。<br />
-                    ただし、発達障害のUIでの困りごとはあまりにも人によって違う部分が多いので、登壇者が語ったとされる「障害名や症状ではなく、具体的な困りごとを起点に考えることが重要」という部分は深く頷けました。やはり困りごとを起点に考えることが重要なのだと思いました。
-                  </p>
+                  <div>
+                    <h5>ひとこと</h5>
+                    <p>
+                      アクセシビリティにおいて、いわゆる「見えづらい障害」に焦点を当ててある登壇をまとめてある記事で、ざっくりわかりやすく網羅されているので、導入にはよいのではないかと思いました。<br />
+                      ただし、発達障害のUIでの困りごとはあまりにも人によって違う部分が多いので、登壇者が語ったとされる「障害名や症状ではなく、具体的な困りごとを起点に考えることが重要」という部分は深く頷けました。やはり困りごとを起点に考えることが重要なのだと思いました。
+                    </p>
+                  </div>
                 </div>
                 <hr />
                 <div class="section-accessibility__omake--inner">
@@ -366,10 +387,12 @@
                   <a href="https://zenn.dev/ymrl/articles/761efe95091798">
                     ymrlさんのZenn記事
                   </a>
-                  <h5>ひとこと</h5>
-                  <p>
-                    自分が思っていた「怖い」の言語化の答えがそこにはありました。この怖いがわかる時点で、私自身はマジョリティ層であることもよくわかります。<br />開発された拡張機能は、自分の制作物はもちろん、世のサイトを見る時にも大変便利でした。これを作っちゃうのが本当に尊敬です…！
-                  </p>
+                  <div>
+                    <h5>ひとこと</h5>
+                    <p>
+                      自分が思っていた「怖い」の言語化の答えがそこにはありました。この怖いがわかる時点で、私自身はマジョリティ層であることもよくわかります。<br />開発された拡張機能は、自分の制作物はもちろん、世のサイトを見る時にも大変便利でした。これを作っちゃうのが本当に尊敬です…！
+                    </p>
+                  </div>
                 </div>
                 <hr />
                 <div class="section-accessibility__omake--inner">
@@ -377,13 +400,15 @@
                   <a href="https://www.kadokawa.co.jp/product/321810000319/">
                     ヤンキー君と白杖ガール 1巻
                   </a>
-                  <h5>ひとこと</h5>
-                  <p>
-                    私にとって、アクセシビリティのバイブルとなった作品です。ちょうどWebデザインの学校に通った時に出会いました。<br />
-                    主人公のヤンキーくんは、好きになった弱視の高校生にあの手この手でアプローチをかけるのですが、そのアプローチが素晴らしいのです。<br />
-                    例えば、良かれと思って時には間違ったことをやってしまう（=ヤンキー君の身長が高いのであと10cm身長が高ければあなたの声が聞こえやすいのに、といわれ足元が不安定なハイヒールをプレゼントしたり）のですが、<br />
-                    どうすれば好きな子が幸せに、快適に過ごせるかをとにかく試行錯誤するんです。アクセシビリティのヒントがたくさん詰まった作品です。
-                  </p>
+                  <div>
+                    <h5>ひとこと</h5>
+                    <p>
+                      私にとって、アクセシビリティのバイブルとなった作品です。ちょうどWebデザインの学校に通った時に出会いました。<br />
+                      主人公のヤンキーくんは、好きになった弱視の高校生にあの手この手でアプローチをかけるのですが、そのアプローチが素晴らしいのです。<br />
+                      例えば、良かれと思って時には間違ったことをやってしまう（=ヤンキー君の身長が高いのであと10cm身長が高ければあなたの声が聞こえやすいのに、といわれ足元が不安定なハイヒールをプレゼントしたり）のですが、<br />
+                      どうすれば好きな子が幸せに、快適に過ごせるかをとにかく試行錯誤するんです。アクセシビリティのヒントがたくさん詰まった作品です。
+                    </p>
+                  </div>
                 </div>
               </div>
             </details>
@@ -530,7 +555,7 @@
         </ul>
       </section>
 
-      <section class="layout-section">
+      <section id="team" class="layout-section">
         <h2 class="layout-section--title">チーム開発で目指したいこと</h2>
         <ul class="section-skills__list">
           <li>
@@ -556,7 +581,7 @@
         </ul>
       </section>
 
-      <section class="layout-section">
+      <section id="design" class="layout-section">
         <h2 class="layout-section--title">デザイン設計思考</h2>
         <div class="layout-section__thinking">
           <div class="section-thinking__content">
